--- a/app/index.html
+++ b/app/index.html
@@ -219,6 +219,68 @@
                             luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
                         </p>
                     </div>
+                    <ul class="">
+                        <li>
+                            <a href="#" class="userpic">
+                                <img src="img/wernay-icon.png" alt="img">
+                            </a>
+                            <div class="comment-item">
+                                <div class="comment-title">
+                                    <a href="#">wernay</a>
+                                    <span>3 hours ago </span>
+                                    <a href="#">reply</a>
+                                </div>
+                            </div>
+                            <div class="comment-text">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.
+                                </p>
+                            </div>
+                        </li>
+                        <ul>
+                            <li>
+                                <a href="#" class="userpic">
+                                    <img src="img/man.png" alt="img">
+                                </a>
+                                <div class="comment-item">
+                                    <div class="comment-title">
+                                        <a href="#">mr. dev</a>
+                                        <span>5 hours ago</span>
+                                        <a href="#">reply</a>
+                                    </div>
+                                </div>
+                                <div class="comment-text">
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                                        nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="userpic">
+                        <img src="img/denpro.png" alt="img">
+                    </a>
+                    <div class="comment-item">
+                        <div class="comment-title">
+                            <a href="#">Skokov</a>
+                            <span>2 hours ago </span>
+                            <a href="#">reply</a>
+                        </div>
+                    </div>
+                    <div class="comment-text">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                            dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+                            suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate
+                            velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
+                            dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                        </p>
+                    </div>
                 </li>
             </ul>
         </div>
